--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	</div>
 
   <!-- Added link to the jQuery Library -->
-    <script src="https://code.jquery.com/jquery-2.2.3.js" integrity="sha206-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4=" crossorigin="anonymous"></script>	
+    <script src="https://code.jquery.com/jquery-2.2.3.js"></script>	
 <!-- The Javascript -->
     <script type="text/javascript" src="assets/javascript/Knytimes.js"></script>	
 
